# django-tutorial

./: db.sqlite3  pyproject.toml
django_poetry_example/: settings.py
polls/: models.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: index.html  newPoll.html  results.html
